# consensus-admm

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README.rst  pyproject.toml  requirements-build.txt  setup.py
baseline/: admm_lasso.py  consensus_admm.py  process.py  process_thread.py  thread.py  utils.py
consensus_admm/: __init__.py
examples/: distributed_lasso.py
include/: consensus_admm.hpp
literature_demo/: admm_lasso_demo.py  consensus_admm_demo.py
src/cpp/: consensus_admm.cpp  test
src/python/: binding.cpp
